Fix modal positioning on mobile devices

--- a/src/angular-sequoia.scss
+++ b/src/angular-sequoia.scss
@@ -55,8 +55,9 @@
       left: 5%;
       margin-left: -2.5%;
       position: fixed;
+      top: 10%;
       width: 90%;
-      z-index: 6;
+      z-index: 9999;
 
       @media (min-width: $screen-sm) {
         left: 50%;
